--- a/index.html
+++ b/index.html
@@ -31,32 +31,84 @@
         <hr>
 
         <section id="main_content">
-          <h3>Welcome to GitHub Pages.</h3>
+<script type="text/javascript" src="https://github.com/pgcafe/Solve-Sudoku/raw/master/solve-sudoku.js"></script>
+<h3>Example To Use Solve-Sudoku.js</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>
+<table id="cells"></table>
+<script type="text/javascript">
+var table = document.getElementById('cells');
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+(function () {
+  var i, j, tr, td, tb;
+  for (i = 0; i < 9; i++) {
+    tr = document.createElement('tr');
+    for (j = 0; j < 9; j++) {
+      td = document.createElement('td');
+      tb = document.createElement('input');
+      tb.type = 'text';
+      tb.size = '2';
+      td.appendChild(tb);
+      tr.appendChild(td);
+    }
+    table.appendChild(tr);
+  }
+})();
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+function gss() {
+  var i, cells = [], sd, tbs = table.getElementsByTagName('input');
+  for (i = 0; i < 81; i++)
+    cells[i] = (tbs[i].value == '')?null:Number(tbs[i].value);
+  sd = solve(cells);
+  for (i = 0; i < 81; i++)
+    tbs[i].value = sd[i]?sd[i]:'';
+}
 
-<h3>Designer Templates</h3>
+function cls() {
+  var i, tbs = table.getElementsByTagName('input');
+  for (i in tbs)
+    tbs[i].value = '';
+}
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+function loadp(cells) {
+  var i, tbs = table.getElementsByTagName('input');
+  for (i = 0; i < 81; i++)
+    tbs[i].value = cells[i]?cells[i]:'';
+}
 
-<h3>Rather Drive Stick?</h3>
+var example1 = [
+   ,6, ,5, , ,2, , ,
+   ,9,8, , ,2, , ,6,
+   , ,7, , , ,4, ,3,
+   , ,1, , ,7, ,2, ,
+  8, , ,1, ,9, , ,5,
+   ,7, ,3, , ,9, , ,
+  4, ,6, , , ,8, , ,
+  5, , ,7, , ,6,1, ,
+   , ,2, , ,6, ,9, ];
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+var example2 = [
+  4, ,5, ,6,1,7,8, ,
+   , ,8,4, , , , ,9,
+   , ,9, , ,3, ,4, ,
+  8, , , , ,5, , ,4,
+   ,5,7, ,8,4,3,9, ,
+  9, , , ,3, , , ,6,
+   ,8, ,7, , ,4, , ,
+  5, , , , ,6,9, , ,
+   ,9,3,5,4, ,1, ,7];
 
-<h3>Authors and Contributors</h3>
+</script>
+<input type="button" value="Solve!" onclick="gss();"></input><br />
+<input type="button" value="Clear" onclick="cls();"></input><br />
+<br />
+<input type="button" value="Load Example Puzzle 1" onclick="loadp(example1);"> </input<br />
+<input type="button" value="Load Example Puzzle 2" onclick="loadp(example2);"> </input<br />
+<br />
+<br />
+</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
         </section>
 
         <footer>
