--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <section id="main_content">
 <script type="text/javascript" src="https://github.com/pgcafe/Solve-Sudoku/raw/master/solve-sudoku.js"></script>
 <h3>Example To Use Solve-Sudoku.js</h1>
+<p>
+Input determined cells of any Sudoku-Puzzle.<br />
+Leave undetermined cells brank.<br />
+Or click 'Load Example Puzzle 1' or '2' button to load one of examples puzzles.<br />
+To solve the inputted puzzle, click 'Solve!' button.<br />
+</p>
 
 <p>
 <table id="cells"></table>
